# vkinder-vk-bot

./: .env.example  .gitignore  LICENSE  README.md  get_personal_photo.py  logging.json  main.py  pyproject.toml  requirements.txt  show_personal_info.py  test.py
logs/: __init__.py  bot_log  logger_config.py
src/: __init__.py  main.py
src/app_bot/: __init__.py  config.py  search_bot.py
src/vkinder/: __init__.py  application.py  config.py  exceptions.py  log.py  main.py  messages.py  shared_types.py  vk.py
src/vkinder/controller/: __init__.py  auth_service.py  controller.py  state.py  state_manager.py  vk_service.py
src/vkinder/controller/states/: __init__.py  main_menu.py  new_user.py  searching.py  state.py  state_manager.py
src/vkinder/model/: __init__.py  db.py  exceptions.py  log.py  types.py
src/vkinder/model/states/: __init__.py  auth.py  auth_provider.py  blacklist.py  favorite_list.py  main_menu.py  new_user.py  profile_provider.py  searching.py  state.py  state_manager.py
src/vkinder/view/: __init__.py  format.py  menu.py  message.py  strings.py
