[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vkinder-vk-bot"
version = "0.0.1"
authors = [
    {name = "andrey0722"},
    {name = "endless-0x01"},
    {name = "VladPrickly"},
]
description = "Бот VK для продвинутого поиска страниц пользователей."
readme = "README.md"
license = "MIT"
requires-python = ">= 3.12"
dependencies = [
    "coloredlogs>=15.0.1",
    "pydantic>=2.11.10",
    "pydantic-settings>=2.11.0",
    "pygments>=2.19.2",
    "vk-api>=11.10.0",
]

[project.scripts]
vkinder = "vkinder.main:main"

[tool.setuptools]
packages = ["vkinder"]
package-dir = {"" = "src"}
